--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,16 @@ body {
     var(--gradient-start),
     var(--gradient-end)
   );
+  -webkit-touch-callout: none !important;
+
+  img {
+    -webkit-user-select: none !important;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+  }
 }
 
 *,
