--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -56,6 +56,10 @@
     &__label {
       text-align: left;
       bottom: -5px;
+      display: flex;
+      align-items: center;
+      gap: 7px;
+      height: 25px;
     }
     &__titles {
       position: absolute;
