--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -2,6 +2,8 @@
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   padding-top: 0px;
+  background: #0f0f0f;
+
   &::-webkit-scrollbar {
     display: none;
   }
@@ -10,8 +12,11 @@
   }
 }
 .home__nav {
-  position: relative;
+  position: absolute;
   z-index: 1;
+  top: 0;
+  width: 100%;
+  background: #0f0f0f;
 
   &__col {
     position: absolute;
@@ -25,7 +30,11 @@
 
 .home__container {
   position: relative;
-  top: 0;
+  top: -6px;
+
+  &.isMyList {
+    top: 60px;
+  }
 }
 
 .billboard {
@@ -47,11 +56,12 @@
   gap: 20px;
   padding: 0 10px 180px;
   overflow: hidden;
-
+  background: #0f0f0f;
   &__row {
     position: relative;
     gap: 6px;
     height: calc(var(--titleHeight) + 25px);
+    width: var(--appWidth);
 
     &__label {
       text-align: left;
@@ -89,6 +99,31 @@
     img {
       border-radius: 5px;
       width: 100%;
+    }
+  }
+}
+
+.mylist {
+  &__nav {
+    position: fixed;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    z-index: 9;
+    height: 60px;
+    background: black;
+    justify-content: center;
+
+    @media only screen and (min-width: 600px) {
+      top: 35px;
+    }
+
+    &__profile {
+      width: 70px;
+      height: 70px;
+      border-radius: 5px;
+      overflow: hidden;
+      margin: auto;
     }
   }
 }
