--- a/src/gestures/gestures.scss
+++ b/src/gestures/gestures.scss
@@ -6,7 +6,7 @@
   height: var(--titleHeight);
   transform-origin: 50% 50% 0px;
   border-radius: 5px;
-  touch-action: none;
+  // touch-action: none;
 }
 
 .longpress-reorder,
