--- a/src/common/actions.scss
+++ b/src/common/actions.scss
@@ -12,4 +12,17 @@
     width: 18px;
     color: black;
   }
+  *.-remove {
+    width: 25px;
+    height: 25px;
+  }
+
+  &.-add {
+    width: 50px;
+    height: 50px;
+    svg {
+      width: 28px;
+      color: black;
+    }
+  }
 }
