tap remove update

--- a/src/gestures/gestures.scss
+++ b/src/gestures/gestures.scss
@@ -33,7 +33,7 @@
     .gesture-detector {
       .boxart {
         animation: wiggle 1.3s infinite;
-        touch-action: none;
+        //touch-action: none;
       }
     }
   }
