--- a/src/gestures/gestures.scss
+++ b/src/gestures/gestures.scss
@@ -6,10 +6,8 @@
   height: var(--titleHeight);
   transform-origin: 50% 50% 0px;
   border-radius: 5px;
-  // touch-action: none;
 }
 
-.longpress-reorder,
 .longpress-remove {
   .lolomo-row__label__edit {
     opacity: 0;
@@ -33,7 +31,7 @@
     .gesture-detector {
       .boxart {
         animation: wiggle 1.3s infinite;
-        touch-action: none;
+        //touch-action: none;
       }
     }
   }
@@ -46,6 +44,36 @@
 
   .gesture-detector {
     &.canDrag {
+      .boxart {
+        animation: wiggle 1.3s infinite;
+        touch-action: none;
+      }
+    }
+  }
+}
+
+.longpress-reorder {
+  .lolomo-row__label__edit {
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
+  }
+
+  .lolomo__row__titles {
+    scroll-behavior: smooth;
+    @for $i from 1 through 10 {
+      .gesture-detector:nth-child(#{$i}n) {
+        .boxart {
+          animation-delay: #{$i * 0.2}s;
+        }
+      }
+    }
+  }
+
+  &.isActive {
+    .lolomo-row__label__edit {
+      opacity: 1;
+    }
+    .gesture-detector {
       .boxart {
         animation: wiggle 1.3s infinite;
         touch-action: none;
