--- a/src/config/config.scss
+++ b/src/config/config.scss
@@ -11,6 +11,10 @@
     min-width: 240px;
     transform: translateY(0%);
     transition: transform 200ms ease-out;
+
+    &__debug {
+      display: none;
+    }
   }
 
   &__header {
@@ -60,6 +64,7 @@
       width: 100%;
 
       &__debug {
+        display: block;
         margin-left: 10px;
       }
     }
