--- a/src/demos/demos.scss
+++ b/src/demos/demos.scss
@@ -81,3 +81,14 @@
     }
   }
 }
+
+.tap-fireworks {
+  background: #000 !important;
+  .billboard__info {
+    bottom: 0;
+  }
+  .lolomo {
+    margin-top: 40px;
+    background: #000;
+  }
+}
