--- a/src/config/config.scss
+++ b/src/config/config.scss
@@ -47,7 +47,7 @@
 
     &.isActive {
       a {
-        color: rgba(0, 0, 0, 0.7);
+        color: var(--nfBrandRed);
       }
     }
 
@@ -78,7 +78,7 @@
 
     &__list {
       top: 0px;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.9);
       width: 100%;
       padding: 10px 20px;
       &.isActive {
