--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,6 @@
 
 html,
 body {
-  // width: var(--appWidth);
-  // height: var(--appHeight);
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -35,6 +33,22 @@ body {
     -moz-user-drag: none;
     -o-user-drag: none;
     user-drag: none;
+  }
+
+  .dg.ac {
+    display: none;
+    z-index: 5;
+    @media only screen and (max-width: 600px) {
+      .dg.a {
+        float: left;
+      }
+    }
+  }
+
+  &.showDebug {
+    .dg.ac {
+      display: block;
+    }
   }
 }
 
